Fixed z-index issue controls

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@ $headings-font-weight: bold;
 
 .run-controls {
     position: absolute;
+    z-index: 900;
     right: 1rem;
     bottom: 1rem;
 }
